chore: checkpoint open changes